[package]
name = "wasm-bindgen-benchmark"
version = "0.0.0"
authors = ["The wasm-bindgen Developers"]
edition = "2021"
publish = false

[dependencies]
wasm-bindgen = { path = '../' }
web-sys = { path = '../crates/web-sys', features = ['Node'] }
js-sys = { path = '../crates/js-sys' }

[lib]
crate-type = ['cdylib']
