[package]
name = "wasm-bindgen-anyref-xform"
version = "0.2.60"
authors = ["The wasm-bindgen Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/anyref-xform"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/wasm-bindgen-anyref-xform"
description = """
Internal anyref transformations for wasm-bindgen
"""
edition = '2018'

[dependencies]
anyhow = "1.0"
walrus = "0.14.0"

[dev-dependencies]
rayon = "1.0"
wasmprinter = "0.2"
wast = "3.0"
wat = "1.0"

[[test]]
name = "all"
harness = false
