[package]
name = "wasm-bindgen-backend"
version = "0.2.92"
authors = ["The wasm-bindgen Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/backend"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/wasm-bindgen-backend"
description = """
Backend code generation of the wasm-bindgen tool
"""
edition = "2018"
rust-version = "1.57"

[features]
spans = []
extra-traits = ["syn/extra-traits"]

[dependencies]
bumpalo = "3.0.0"
log = "0.4"
once_cell = "1.12"
proc-macro2 = "1.0"
quote = '1.0'
syn = { version = '2.0', features = ['full'] }
wasm-bindgen-shared = { path = "../shared", version = "=0.2.92" }
