[package]
name = "wasm-bindgen-cli-support"
version = "0.2.87"
authors = ["The wasm-bindgen Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/cli-support"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/wasm-bindgen-cli-support"
description = """
Shared support for the wasm-bindgen-cli package, an internal dependency
"""
edition = '2018'
rust-version = "1.56"

[dependencies]
anyhow = "1.0"
base64 = "0.9"
log = "0.4"
rustc-demangle = "0.1.13"
serde_json = "1.0"
tempfile = "3.0"
walrus = "0.19.0"
wasm-bindgen-externref-xform = { path = '../externref-xform', version = '=0.2.87' }
wasm-bindgen-multi-value-xform = { path = '../multi-value-xform', version = '=0.2.87' }
wasm-bindgen-shared = { path = "../shared", version = '=0.2.87' }
wasm-bindgen-threads-xform = { path = '../threads-xform', version = '=0.2.87' }
wasm-bindgen-wasm-conventions = { path = '../wasm-conventions', version = '=0.2.87' }
wasm-bindgen-wasm-interpreter = { path = "../wasm-interpreter", version = '=0.2.87' }
unicode-ident = "1.0.5"
