[package]
name = "wasm-bindgen-cli"
version = "0.2.87"
authors = ["The wasm-bindgen Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/cli"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://rustwasm.github.io/wasm-bindgen/"
categories = ["wasm"]
description = """
Command line interface of the `#[wasm_bindgen]` attribute and project. For more
information see https://github.com/rustwasm/wasm-bindgen.
"""
edition = '2018'
default-run = 'wasm-bindgen'
rust-version = "1.56"

[dependencies]
curl = "0.4.13"
docopt = "1.0"
env_logger = "0.8"
anyhow = "1.0"
log = "0.4"
openssl = { version = '0.10.11', optional = true }
rouille = { version = "3.0.0", default-features = false }
serde = { version = "1.0", features = ['derive'] }
serde_derive = "1.0"
serde_json = "1.0"
walrus = { version = "0.19.0", features = ['parallel'] }
wasm-bindgen-cli-support = { path = "../cli-support", version = "=0.2.87" }
wasm-bindgen-shared = { path = "../shared", version = "=0.2.87" }

[dev-dependencies]
assert_cmd = "1.0"
diff = "0.1"
predicates = "1.0.0"
rayon = "1.0"
tempfile = "3.0"
wasmparser = "0.102.0"
wasmprinter = "0.2.54"

[[test]]
name = "reference"
harness = false

[features]
vendored-openssl = ['openssl/vendored']
