[package]
name = "wasm-bindgen-cli"
version = "0.2.92"
authors = ["The wasm-bindgen Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/cli"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://rustwasm.github.io/wasm-bindgen/"
categories = ["wasm"]
description = """
Command line interface of the `#[wasm_bindgen]` attribute and project. For more
information see https://github.com/rustwasm/wasm-bindgen.
"""
edition = "2021"
default-run = 'wasm-bindgen'
rust-version = "1.76"
include = ["/LICENSE-*", "/src"]

[package.metadata.binstall]
pkg-url = "https://github.com/rustwasm/wasm-bindgen/releases/download/{ version }/wasm-bindgen-{ version }-{ target }{ archive-suffix }"
bin-dir = "wasm-bindgen-{ version }-{ target }/{ bin }{ binary-ext }"

[dependencies]
docopt = "1.0"
env_logger = "0.11.5"
anyhow = "1.0"
log = "0.4"
native-tls = { version = "0.2", default-features = false, optional = true }
rouille = { version = "3.0.0", default-features = false }
serde = { version = "1.0", features = ['derive'] }
serde_derive = "1.0"
serde_json = "1.0"
ureq = { version = "2.7", default-features = false, features = [
    "brotli",
    "gzip",
] }
walrus = { version = "0.21", features = ['parallel'] }
wasm-bindgen-cli-support = { path = "../cli-support", version = "=0.2.92" }
wasm-bindgen-shared = { path = "../shared", version = "=0.2.92" }

[dev-dependencies]
assert_cmd = "2"
diff = "0.1"
predicates = "3"
rayon = "1.0"
tempfile = "3.0"
wasmparser = "0.212"
wasmprinter = "0.212"

[[test]]
name = "reference"
harness = false

[features]
default = ["rustls-tls"]

native-tls = ["ureq/native-tls"]
rustls-tls = ["ureq/tls"]

# Legacy support
openssl = ["dep:native-tls"]
vendored-openssl = ["openssl", "native-tls/vendored"]
