[package]
name = "example-tests"
version = "0.0.0"
authors = ["The wasm-bindgen Developers"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
futures-util = { version = "0.3.28", features = ["sink"] }
http = "1"
hyper = "1"
hyper-util = { version = "0.1.6", features = ["http1", "service", "server", "tokio"] }
mozprofile = "0.9"
mozrunner = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29.1", features = ["macros", "net", "time"] }
tokio-tungstenite = "0.23"
tower = { version = "0.4.13", features = ["make"] }
tower-http = { version = "0.5", features = ["fs", "util", "set-header"] }
