[package]
authors = ["The wasm-bindgen Developers"]
description = """
Internal externref transformations for wasm-bindgen
"""
documentation = "https://docs.rs/wasm-bindgen-externref-xform"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-externref-xform"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/externref-xform"
rust-version = "1.76"
version = "0.2.93"

[dependencies]
anyhow = "1.0"
walrus = "0.21"
wasm-bindgen-wasm-conventions = { path = "../wasm-conventions", version = "=0.2.93" }

[dev-dependencies]
rayon = "1.0"
wasmprinter = "0.212"
wast = "212"
wat = "1.0"

[[test]]
harness = false
name = "all"
