[package]
authors = ["The wasm-bindgen Developers"]
description = "Bridging the gap between Rust Futures and JavaScript Promises"
documentation = "https://docs.rs/wasm-bindgen-futures"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-futures"
readme = "./README.md"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/futures"
rust-version = "1.57"
version = "0.4.50"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1.0.0"
futures-core = { version = '0.3.8', default-features = false, optional = true }
js-sys = { path = "../js-sys", version = '=0.3.77', default-features = false }
once_cell = { version = "1.12", default-features = false }
wasm-bindgen = { path = "../..", version = '=0.2.100', default-features = false }

[features]
default = ["std"]
futures-core-03-stream = ['futures-core']
std = ["wasm-bindgen/std", "js-sys/std", "web-sys/std"]

[target.'cfg(target_feature = "atomics")'.dependencies]
web-sys = { path = "../web-sys", version = "=0.3.77", default-features = false, features = [
  "MessageEvent",
  "Worker",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
futures-channel = "0.3"
futures-lite = { version = "2", default-features = false }
wasm-bindgen-test = { path = '../test' }

[lints]
workspace = true
