[package]
name = "wasm-bindgen-gc"
version = "0.2.32"
authors = ["The wasm-bindgen Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/gc"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/wasm-bindgen-gc"
description = """
Support for removing unused items from a wasm executable
"""

[dependencies]
parity-wasm = "0.35.1"
log = "0.4"
rustc-demangle = "0.1.9"

[dev-dependencies]
rayon = "1.0.2"
tempfile = "3.0.4"

[lib]
doctest = false

[[test]]
name = 'all'
harness = false
