[package]
name = "js-sys"
version = "0.3.69"
authors = ["The wasm-bindgen Developers"]
readme = "./README.md"
categories = ["wasm"]
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/js-sys"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/js-sys"
description = """
Bindings for all JS global objects and functions in all JS environments like
Node.js and browsers, built on `#[wasm_bindgen]` using the `wasm-bindgen` crate.
"""
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.57"
include = ["/LICENSE-*", "/src"]

[lib]
test = false
doctest = false

[dependencies]
wasm-bindgen = { path = "../..", version = "0.2.92" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { path = '../test' }
wasm-bindgen-futures = { path = '../futures' }
web-sys = { path = "../web-sys", features = ["Headers", "Response", "ResponseInit"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(js_sys_unstable_apis)'] }
