[package]
authors = ["The wasm-bindgen Developers"]
categories = ["wasm"]
description = """
Bindings for all JS global objects and functions in all JS environments like
Node.js and browsers, built on `#[wasm_bindgen]` using the `wasm-bindgen` crate.
"""
documentation = "https://docs.rs/js-sys"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "js-sys"
readme = "./README.md"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/js-sys"
rust-version = "1.57"
version = "0.3.77"

[lib]
doctest = false
test = false

[features]
default = ["std"]
std = ["wasm-bindgen/std"]

[dependencies]
once_cell = { version = "1.12", default-features = false }
wasm-bindgen = { path = "../..", version = "=0.2.100", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = { path = '../futures' }
wasm-bindgen-test = { path = '../test' }
web-sys = { path = "../web-sys", features = ["Headers", "Response", "ResponseInit"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(js_sys_unstable_apis)'] }

[lints.clippy]
large_enum_variant = "allow"
new_without_default = "allow"
overly_complex_bool_expr = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
