[package]
name = "wasm-bindgen-macro-support"
version = "0.2.27"
authors = ["The wasm-bindgen Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/macro-support"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/wasm-bindgen"
description = """
The part of the implementation of the `#[wasm_bindgen]` attribute that is not in the shared backend crate
"""

[features]
spans = ["wasm-bindgen-backend/spans"]
extra-traits = ["syn/extra-traits"]

[dependencies]
syn = { version = '0.15.0', features = ['visit'] }
quote = '0.6'
proc-macro2 = "0.4.9"
wasm-bindgen-backend = { path = "../backend", version = "=0.2.27" }
wasm-bindgen-shared = { path = "../shared", version = "=0.2.27" }
