[package]
authors = ["The wasm-bindgen Developers"]
description = """
The part of the implementation of the `#[wasm_bindgen]` attribute that is not in the shared backend crate
"""
documentation = "https://docs.rs/wasm-bindgen"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-macro-support"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/macro-support"
rust-version = "1.57"
version = "0.2.100"

[features]
extra-traits = ["syn/extra-traits"]
strict-macro = []

[dependencies]
proc-macro2 = "1.0"
quote = '1.0'
syn = { version = '2.0', features = ['visit', 'visit-mut', 'full'] }
wasm-bindgen-backend = { path = "../backend", version = "=0.2.100" }
wasm-bindgen-shared = { path = "../shared", version = "=0.2.100" }

[lints]
workspace = true
