[package]
name = "wasm-bindgen-macro"
version = "0.2.92"
authors = ["The wasm-bindgen Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/macro"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/wasm-bindgen"
description = """
Definition of the `#[wasm_bindgen]` attribute, an internal dependency
"""
edition = "2018"
rust-version = "1.57"

[lib]
proc-macro = true

[features]
spans = ["wasm-bindgen-macro-support/spans"]
xxx_debug_only_print_generated_code = []
strict-macro = ["wasm-bindgen-macro-support/strict-macro"]

[dependencies]
wasm-bindgen-macro-support = { path = "../macro-support", version = "=0.2.92" }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
wasm-bindgen = { path = "../..", version = "0.2.92" }
wasm-bindgen-futures = { path = "../futures", version = "0.4.42" }
web-sys = { path = "../web-sys", version = "0.3.69", features = ["Worker"] }
