[package]
authors = ["The wasm-bindgen Developers"]
description = """
Definition of the `#[wasm_bindgen]` attribute, an internal dependency
"""
documentation = "https://docs.rs/wasm-bindgen"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-macro"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/macro"
rust-version = "1.57"
version = "0.2.96"

[lib]
proc-macro = true

[features]
atomics = ["wasm-bindgen-macro-support/atomics"]
coverage = ["wasm-bindgen-macro-support/coverage"]
default = ["std"]
spans = ["wasm-bindgen-macro-support/spans"]
std = ["wasm-bindgen-macro-support/std"]
strict-macro = ["wasm-bindgen-macro-support/strict-macro"]
xxx_debug_only_print_generated_code = []

[dependencies]
quote = "1.0"
wasm-bindgen-macro-support = { path = "../macro-support", version = "=0.2.96", default-features = false }

[dev-dependencies]
js-sys = { path = "../js-sys" }
trybuild = "1.0"
wasm-bindgen = { path = "../.." }
wasm-bindgen-futures = { path = "../futures" }
web-sys = { path = "../web-sys", features = ["Worker"] }

[lints]
workspace = true
